<resources>
    <string name="app_name">EvenementerApp</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_account">Do you don\'t have an account?</string>
    <string name="username">Username</string>
    <string name="login">LOG IN</string>
    <string name="signin">Sign In</string>
    <string name="sobre_nosotros">Evenementer App es una aplicacion con la que podras realizar eventos y consultar
    sobre los eventos populares que estan vigentes en donde se te brindara informacion del evento, formas de pago,
    clasificaciones, entre otras cosas.
    De igual manera, podras organizar tus propios eventos.</string>
    <string name="menu_home">Home</string>
    <string name="About">About it</string>
    <string name="menu_others">Otros</string>
    <string name="publics">Publics</string>
    <string name="my_events">My Events</string>
    <string name="organized">Organized</string>
    <string name="last_name">LastName</string>
    <string name="password">Write your password</string>
    <string name="name">Name</string>
    <string name="email">E-mail</string>
</resources>
